tests/snapshots/snapshot_fixtures__stdlib__stdlib__rand_srand.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdlib/rand_srand.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[7] = "%d %d\n" [cir_private, default, align 1, dso_local, constant]

fn srand(%arg0: u32i) -> void [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn rand() -> s32i [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 7 : u32i
    call @srand(%2) [all]
    %3 = get_global @printf : ((s8i*, ...) -> s32i)*
    %4 = get_global @.str : s8i[7]*
    %5 = cast(array_to_ptrdecay) %4 : s8i*
    %6 = call @rand() : s32i [all]
    %7 = call @rand() : s32i [all]
    %8 = call @printf(%5, %6, %7) : s32i [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
