tests/snapshots/snapshot_fixtures__stdlib__stdlib__realloc_edges.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/stdlib/realloc_edges.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[13] = "alloc failed" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn realloc(%arg0: void*, %arg1: u64i) -> void* [external, c, nothrow];
fn puts(%arg0: s8i*) -> s32i [external, c];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i*, "p", align 8
    %2 = alloca void*, "q", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @realloc : ((void*, u64i) -> void*)*
    %5 = const #cir.ptr<null> : void*
    %6 = const 2 : u64i
    %7 = const 4 : u64i
    %8 = mul %6, %7 : u64i
    %9 = call @realloc(%5, %8) : void* [all]
    %10 = cast(bitcast) %9 : s32i*
    store %10, %1, align 8
    scope {
        %53 = load %1 : s32i*, align 8
        %54 = cast(ptr_to_bool) %53 : bool
        %55 = not %54 : bool
        if %55 {
            %56 = get_global @.str : s8i[13]*
            %57 = cast(array_to_ptrdecay) %56 : s8i*
            %58 = call @puts(%57) : s32i [all]
            %59 = const 1 : s32i
            store %59, %0
            %60 = load %0 : s32i
            return %60
        }
        yield
    }
    %11 = const 11 : s32i
    %12 = const 0 : s64i
    %13 = load %1 : s32i*, align 8
    %14 = ptr_stride %13, %12 : s32i*
    store %11, %14, align 4
    %15 = const 31 : s32i
    %16 = const 1 : s64i
    %17 = load %1 : s32i*, align 8
    %18 = ptr_stride %17, %16 : s32i*
    store %15, %18, align 4
    %19 = get_global @printf : ((s8i*, ...) -> s32i)*
    %20 = get_global @.str.1 : s8i[4]*
    %21 = cast(array_to_ptrdecay) %20 : s8i*
    %22 = const 0 : s64i
    %23 = load %1 : s32i*, align 8
    %24 = ptr_stride %23, %22 : s32i*
    %25 = load %24 : s32i, align 4
    %26 = const 1 : s64i
    %27 = load %1 : s32i*, align 8
    %28 = ptr_stride %27, %26 : s32i*
    %29 = load %28 : s32i, align 4
    %30 = add %25, %29 : s32i [nsw]
    %31 = call @printf(%21, %30) : s32i [all]
    %32 = get_global @realloc : ((void*, u64i) -> void*)*
    %33 = load %1 : s32i*, align 8
    %34 = cast(bitcast) %33 : void*
    %35 = const 0 : u64i
    %36 = call @realloc(%34, %35) : void* [all]
    store %36, %2, align 8
    %37 = get_global @printf : ((s8i*, ...) -> s32i)*
    %38 = get_global @.str.1 : s8i[4]*
    %39 = cast(array_to_ptrdecay) %38 : s8i*
    %40 = load %2 : void*, align 8
    %41 = const #cir.ptr<null> : void*
    %42 = cmp eq %40, %41 : bool
    %43 = ternary %42 ? { : bool
        %52 = const true : bool
        yield %52
    } : {
        %48 = load %2 : void*, align 8
        %49 = load %1 : s32i*, align 8
        %50 = cast(bitcast) %49 : void*
        %51 = cmp ne %48, %50 : bool
        yield %51
    }
    %44 = cast(bool_to_int) %43 : s32i
    %45 = call @printf(%39, %44) : s32i [all]
    %46 = const 0 : s32i
    store %46, %0
    %47 = load %0 : s32i
    return %47
}
