tests/snapshots/snapshot_fixtures__stdlib__stdlib__strtof.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/stdlib/stdlib/strtof.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[10] = "-1.50tail" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[9] = "%.2f %c\n" [cir_private, default, align 1, dso_local, constant]

fn strtof(%arg0: s8i*, %arg1: s8i**) -> float [external, c, nothrow];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i*, "end", align 8
    %2 = alloca float, "f", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = const #cir.ptr<null> : s8i*
    store %4, %1, align 8
    %5 = get_global @strtof : ((s8i*, s8i**) -> float)*
    %6 = get_global @.str : s8i[10]*
    %7 = cast(array_to_ptrdecay) %6 : s8i*
    %8 = call @strtof(%7, %1) : float [all]
    store %8, %2, align 4
    %9 = get_global @printf : ((s8i*, ...) -> s32i)*
    %10 = get_global @.str.1 : s8i[9]*
    %11 = cast(array_to_ptrdecay) %10 : s8i*
    %12 = load %2 : float, align 4
    %13 = cast(floating) %12 : double
    %14 = load %1 : s8i*, align 8
    %15 = load %14 : s8i, align 1
    %16 = cast(integral) %15 : s32i
    %17 = call @printf(%11, %13, %16) : s32i [all]
    %18 = const 0 : s32i
    store %18, %0
    %19 = load %0 : s32i
    return %19
}
